# mcumgr-client

./: .gitignore  Cargo.toml  README.md  README.python.md  pyproject.toml
.github/workflows/: CI.yml  release.yaml
python/mcumgr_client/: __init__.py
python/mcumgr_client/examples/: upload.py
src/: cli.rs  default.rs  fs.rs  image.rs  interface.rs  lib.rs  main.rs  nmp_hdr.rs  os.rs  serial_port_interface.rs  settings.rs  shell.rs  stat.rs  test_serial_port.rs  test_serial_port_interface.rs  transfer.rs  util.rs
