[package]
name = "mcumgr-client"
version = "0.0.4"
edition = "2021"
repository = "https://github.com/vouch-opensource/mcumgr-client/"
license = "Apache-2.0"
description = "Run MCUmgr commands for uploading firmware updates from a PC to an embedded device"
exclude = [
    "/.github",
    ".gitignore",
    "/python/mcumgr_client/examples/"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.21"
bincode = "1.3"
byteorder = "1.4"
clap = { version = "4", features = ["derive"] }
crc16 = "0.4"
hex = "0.4"
humantime = "2.1.0"
indicatif = "0.17"
lazy_static = "1.4"
log = "0.4"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1.0"
serde_repr = "0.1"
serialport = {version = "4.2", default-features = false}
sha2 = "0.10"
simplelog = "0.12"